force-app/main/default/objects/PWChrono_Training_Attendance__c/PWChrono_Training_Attendance__c.object-meta.xml
<CustomObject>
    <label>Training Attendance</label>
    <nameField>
        <displayFormat>TRNA-{00000}</displayFormat>
        <label>Attendance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Attendances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>