force-app/main/default/objects/PWChrono_Training_Attendance__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Training Attendances</relationshipLabel>
    <relationshipName>PWChrono_Training_Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>