force-app/main/default/objects/PWChrono_Training_Attendance__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employees</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Training Attendance Employees</relationshipLabel>
    <relationshipName>Training_Attendance_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>