force-app/main/default/objects/PWChrono_Training_Attendance__c/fields/Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Portal_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal User</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Training Attendance Portal Users</relationshipLabel>
    <relationshipName>Training_Attendance_Portal_Users</relationshipName>
    <type>Lookup</type>
</CustomField>