force-app/main/default/objects/PWChrono_Training_Attendance__c/fields/Training_Event__c.field-meta.xml
<CustomField>
    <fullName>Training_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Event</label>
    <referenceTo>PWChrono_Training_Event__c</referenceTo>
    <relationshipLabel>Training Attendances</relationshipLabel>
    <relationshipName>PWChrono_Training_Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>